--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Android Developing Channel.
 SEOTitle: Allen Vork's blog | BY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-github-cup.jpg
 email: 594074064@qq.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, allenvork, Android"
