--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Day By Day.
 SEOTitle: Allen Vork's blog
-header-img: img/tag-bg-o.jpg
+header-img: img/nightfall.jpg
 email: 594074064@qq.com
 description: "Every failure is leading towards success."
 keyword: "allenvork, Android"
