--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Day By Day.
 SEOTitle: Allen Vork's blog
-header-img: img/nightfall.jpg
+header-img: img/android.png
 email: 594074064@qq.com
 description: "I know what u want."
 keyword: "allenvork, Android"
