--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Day By Day.
+title: The DEV Lyrics.
 SEOTitle: Allen Vork's blog
 header-img: img/android.png
 email: 594074064@qq.com
